Fix unnecessary scrollbar

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -11,6 +11,5 @@ html {
     height: 100%;
 }
 body {
-    min-height: 100dvh;
     background-color: black;
 }
